# Flux

./: .env.example  00_START_HERE.md  ARCHITECTURE.md  DEVELOPMENT.md  PROJECT_COMPLETE.txt  PROJECT_SUMMARY.md  QUICK_START.md  README.md  REDESIGN_NOTES.md  ROADMAP.md  SETUP_CHECKLIST.md  setup.sh  start-dev.sh
config/: workers.yaml
docker/: Dockerfile.elixir  Dockerfile.python  docker-compose.yml
elixir/: .gitignore  mix.exs
elixir/lib/flux/: application.ex  config.ex  data_store.ex  database.ex  pubsub.ex  stream_supervisor.ex  websocket_handler.ex  worker.ex  worker_graph.ex  worker_supervisor.ex
elixir/lib/flux/algorithms/: sentiment_technical.ex
elixir/lib/flux/streams/: crypto_stream.ex
elixir/lib/flux/workers/: aggregation_worker.ex  algorithm_worker.ex  source_worker.ex  transcriber_worker.ex
elixir/native/flux_data/src/: lib.rs
python/: .gitignore  requirements.txt  strategies.py
rust/: Cargo.toml
rust/src/: lib.rs
