[package]
name = "flux_data"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
rustler = "0.33"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nalgebra = "0.33"
ndarray = "0.15"
ndarray-stats = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
